# docs/swagger.json
@@ -28,9 +28,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin - Users"
+                    "User"
                 ],
-                "summary": "Получение списка всех пользователей",
+                "summary": "Получение списка всех пользователей (admin)",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -295,11 +295,11 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Возвращает список заказов текущего пользователя",
+                "description": "Возвращает список заказов",
                 "tags": [
                     "orders"
                 ],
-                "summary": "Get all user orders",
+                "summary": "Get all user orders (user/admin)",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -338,7 +338,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Create a new order for authenticated user",
+                "description": "Create a new order (user/admin)",
                 "consumes": [
                     "application/json"
                 ],
@@ -346,7 +346,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Orders"
+                    "orders"
                 ],
                 "summary": "Create order",
                 "parameters": [
@@ -628,11 +628,11 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Возвращает заказ по ID (user/admin)",
+                "description": "Возвращает заказ по ID",
                 "tags": [
                     "orders"
                 ],
-                "summary": "Get order by ID",
+                "summary": "Get order by ID (user/admin)",
                 "parameters": [
                     {
                         "type": "integer",
@@ -811,7 +811,7 @@
                 "tags": [
                     "orders"
                 ],
-                "summary": "Cancel order",
+                "summary": "Cancel order (user/admin)",
                 "parameters": [
                     {
                         "type": "integer",
@@ -876,7 +876,7 @@
                 "tags": [
                     "products"
                 ],
-                "summary": "Get all products",
+                "summary": "Get all products (admin/user)",
                 "responses": {
                     "200": {
                         "description": "products: []Product",
@@ -1250,9 +1250,6 @@
                 "pickup_point"
             ],
             "properties": {
-                "delivery_date": {
-                    "type": "string"
-                },
                 "items": {
                     "type": "array",
                     "items": {
@@ -1261,7 +1258,7 @@
                 },
                 "pickup_point": {
                     "type": "string",
-                    "example": "Mirzo Ulug'bek. Buyuk Ipak Yoli st. 109/45"
+                    "example": "Mirzo Ulug'bek. Buyuk Ipak Yoli st. 109. 45"
                 }
             }
         },
@@ -1336,7 +1333,8 @@
                     "example": 12000
                 },
                 "product_id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 4
                 },
                 "quantity": {
                     "type": "integer",
@@ -1380,6 +1378,13 @@
                     "example": "user"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
